namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-chat
  labels:
    name: ai-chat
