ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-chat-ingress
  namespace: ai-chat
spec:
  ingressClassName: traefik
  rules:
    - host: ai-chat.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-chat-frontend
                port:
                  number: 80
